test/kubernetes/e2e/features/adaptive_concurrency/testdata/gateway.yaml
apiVersion: gateway.solo.io/v1
kind: Gateway
metadata:
  name: gateway-proxy
  namespace: gloo-gateway-edge-test
spec:
  bindAddress: '::'
  bindPort: 8080
  httpGateway:
    options:
      adaptiveConcurrency:
        concurrencyLimitCalculationParams:
          concurrencyUpdateInterval: 1000
          maxConcurrencyLimit: 10
        minRttCalculationParams:
          bufferPercentile: 5
          interval: 1000
          requestCount: 10
