test/kubernetes/e2e/features/adaptive_concurrency/testdata/sleep-server-vses.yaml
# Don't set namespace, apply to test installation namespace
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: sleep-vs-1
spec:
  virtualHost:
    domains:
      - "example-1.com"
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: sleep-server-upstream
              namespace: sleep-server
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: sleep-vs-2
spec:
  virtualHost:
    domains:
      - "example-2.com"
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: sleep-server-upstream
              namespace: sleep-server
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: sleep-vs-3
spec:
  virtualHost:
    domains:
      - "example-3.com"
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: sleep-server-upstream
              namespace: sleep-server
